# hook-transpiler

./: .gitignore  ANDROID_IMPLEMENTATION.md  Cargo.toml  IMPLEMENTATION_CHECKLIST.txt  MODULE_CACHE_IMPLEMENTATION.md  MODULE_CACHE_STRATEGY.md  README.md  build-and-deploy.sh  build.gradle  clevertree-hook-transpiler-1.3.1.tgz  gradle.properties  gradlew  package.json  settings.gradle  test_automatic_jsx.rs  test_transpile.js  tsconfig.json
.github/: copilot-instructions.md
android/: CMakeLists.txt  COMPLETION_CHECKLIST.md  DELIVERY_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX.js  INTEGRATION.md  MANIFEST.md  README.md  build.gradle  build.gradle.kts  build.sh  consumer-proguard-rules.pro  gradle.properties  hook-renderer.js  index.android.ts  pom.xml  proguard-rules.pro  runtimeLoader.ts  settings.gradle.kts  verify-implementation.sh  webApiShims.ts
android/components/: HookApp.tsx  HookRenderer.tsx
android/src/androidTest/kotlin/com/clevertree/hooktranspiler/render/: HookRendererBridgeTest.kt  HookRendererIntegrationTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/assets/: act-android.bundle.js  bridge.js  markdown-to-jsx.min.js  react-native.bundle.js
android/src/main/cpp/: hook_transpiler_jni.cpp.template
android/src/main/java/com/facebook/jsc/wrapper/: JSContext.java  JSException.java  JSObject.java  JavaScriptObject.java
android/src/main/java/com/relay/client/: ThemedStylerModule.java
android/src/main/kotlin/com/clevertree/hooktranspiler/app/: HookApp.kt
android/src/main/kotlin/com/clevertree/hooktranspiler/error/: HookError.kt
android/src/main/kotlin/com/clevertree/hooktranspiler/jni/: HookTranspilerJNI.kt  JsExecutor.kt  ModuleLoader.kt  TranspilerBridge.kt
android/src/main/kotlin/com/clevertree/hooktranspiler/model/: JsxElement.kt  RendererMode.kt
android/src/main/kotlin/com/clevertree/hooktranspiler/render/: HookRenderer.kt  NativeRenderer.kt
android/src/main/kotlin/com/clevertree/hooktranspiler/styling/: StylingRegistry.kt
android/src/main/kotlin/com/clevertree/hooktranspiler/transpiler/: HookTranspiler.kt
android/src/main/kotlin/com/clevertree/hooktranspiler/ui/: DebugConsoleOverlay.kt
android/src/main/res/values/: ids.xml
android/src/test/kotlin/com/clevertree/hooktranspiler/render/: HookRendererTest.kt
android/src/test/kotlin/com/clevertree/hooktranspiler/test/: HookTranspilerTests.kt
docs/: ANDROID_ARCHITECTURE.md  ANDROID_HOOK_RENDERER_ARCHITECTURE.md  ANDROID_REFACTORING_STRATEGY.md  ANDROID_TEST_COVERAGE.md  ANDROID_WEB_PARITY_FIX.md  BUNDLE_SIZE_ANALYSIS.md  CONSOLE_LOG_FIX.md  CROSS_PLATFORM_FIX.md  DEBUG_ARCHITECTURE.md  DEBUG_COMPLETE.md  DEBUG_IMPLEMENTATION_SUMMARY.md  DEBUG_LAYER.md  DELIVERABLES.md  DOCUMENTATION_INDEX.md  EDGE_CASES_CATALOG.md  ENHANCED_REGEX_SOLUTION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  IMPORT_HANDLING_CHECKLIST.md  IMPORT_HANDLING_OPTIONS.md  IMPORT_SOLUTIONS_SUMMARY.md  NATIVE_BACKED_STRATEGY.md  PLAN.md  QUICK_DEBUG_REFERENCE.md  QUICK_REFERENCE.md  REACT_NATIVE_IMPLEMENTATION.md  REACT_NATIVE_QUICK_START.md  REFACTORING_COMPLETE.md  REFACTORING_COMPLETION_REPORT.md  REFACTORING_SESSION_SUMMARY.md  SESSION_COMPLETE_REPORT.md  SOLUTION_DECISION_GUIDE.md  SOLUTION_TECHNICAL_NOTES.md  SWC_IMPLEMENTATION_INDEX.md  SWC_INTEGRATION.md  SWC_NATIVE_COMPLETE.md  SWC_VS_REGEX_DECISION.md  TEST_APP_INVESTIGATION.md  TRANSPILER_DECISION_QUICK_START.md  (+4 more)
scripts/: build-android.sh  bundle-markdown.js
shared/: es6ImportHandler.ts  themeRegistry.ts  urlBuilder.ts
src/: HOOK_CONTEXT.md  android_jni.rs  debug.rs  es6ImportHandler.ts  ffi.rs  index.android.ts  index.native.ts  index.ts  ios_ffi.rs  jsx_parser.rs  lib.rs  lib.rs.backup  runtimeLoader.test.ts  runtimeLoader.ts  selfCheck.test.ts  swc_native.rs  swc_transformer.rs  types.d.ts  urlBuilder.ts  wasm_api.rs
src/android/: index.ts  quickJsContext.ts  webApiShims.ts
src/components/: FileRenderer.tsx  HookRenderer.tsx  MarkdownRenderer.tsx
src/components/android/: HookApp.tsx  HookRenderer.tsx  intrinsic.d.ts
src/components/web/: ErrorBoundary.tsx  FileRenderer.tsx  HookApp.tsx  HookRenderer.tsx  MarkdownRenderer.tsx
src/web/: index.ts  runtimeLoader.test.ts
src/web/components/: ErrorBoundary.tsx  MarkdownRenderer.tsx
tests/: android_imports.rs  debug_transpile.rs  dynamic_import_swc.rs  input_datalist_transpile.rs  large_file_test.rs  map_transpile.rs  module_transform.rs  repro_home.rs  test_client_transpile.rs  ts_transpile.rs  useeffect_regression.rs
tests/android/: build.gradle  gradle.properties  gradlew  settings.gradle
tests/android/app/: build.gradle
tests/android/scripts/: dev-server.cjs
tests/fixtures/: debug_hook.jsx  home_original.jsx  map_test.jsx
tests/unit/: moduleCache.test.ts
tests/web/: cypress.config.js  package.json  server.js
tests/web/cypress/e2e/: cache_deduplication.cy.js  metadata-extraction.cy.js  remote_hook_options.cy.js  string_keywords.cy.js  transpilation.cy.js
tests/web/public/: index.html  test-app.bundle.js  test-app.js  url-tester.html
tests/web/public/hooks/: lazy-data.js  test-hook.jsx
tests/web/scripts/: run-e2e.js
wasm/: relay_hook_transpiler.d.ts  relay_hook_transpiler_bg.wasm  relay_hook_transpiler_bg.wasm.d.ts
web/: index.ts  runtimeLoader.ts
web/components/: FileRenderer.tsx  HookApp.tsx  HookRenderer.tsx  MarkdownRenderer.tsx
(+44 files in other folders)
